[tool.poetry]
name = "visagpt"
version = "0.1.0"
description = "VisaGPT - Bridging Borders, One Question at a Time"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
streamlit = "^1.22.0"
streamlit-chat = "^0.0.2.2"
openai = "^0.27.6"
langchain = "^0.0.168"
chromadb = "^0.3.22"
tiktoken = "^0.4.0"
pypdf = "^3.8.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 88
preview = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
